@@ -31,6 +31,7 @@ import (
 // Status describes the current status of the beat.
 type Status int
 
+//go:generate stringer -type=Status
 const (
 	// Unknown is initial status when none has been reported.
 	Unknown Status = iota
